--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flip_card: ^0.6.0 # to flip the flashcard
+  flutter_tindercard: ^0.2.0 # to swipte hte flashcards
 
 
   # The following adds the Cupertino Icons font to your application.
