--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   flip_card: ^0.6.0 # to flip the flashcard
   flutter_tindercard: ^0.2.0 # to swipte hte flashcards
+  cloud_firestore: ^3.1.5
+  firebase_core: ^1.10.6
 
   material_floating_search_bar: ^0.3.6
 
