--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,8 @@ dependencies:
   flutter_tindercard: ^0.2.0 # to swipte hte flashcards
   cloud_firestore: ^3.1.5
   firebase_core: ^1.10.6
-
   material_floating_search_bar: ^0.3.6
-
+  sign_button: ^2.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
