--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,20 @@ dependencies:
   flutter_tindercard: ^0.2.0 # to swipte hte flashcards
   cloud_firestore: ^3.1.5
   firebase_core: ^1.10.6
-
   material_floating_search_bar: ^0.3.6
-
+  sign_button: ^2.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.4
+  google_sign_in: ^5.2.1
+  provider: ^6.0.1
+
+  firebase_storage: ^10.2.4
+  path_provider: ^2.0.8
+  http: ^0.13.4
+  flutter_downloader: ^1.7.1
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_test:
