--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: MemBoost mobile application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -45,7 +45,6 @@ dependencies:
   http: ^0.13.4
   flutter_downloader: ^1.7.1
   permission_handler: ^8.3.0
-
 
 dev_dependencies:
   flutter_test:
