--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.4
   flutter_downloader: ^1.7.1
   permission_handler: ^8.3.0
+  url_launcher: ^6.0.17
 dev_dependencies:
   flutter_test:
     sdk: flutter
